# vaudience_api

./: .gitignore  crud.py  db.sqlite3  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_27_0849-6bba23f1602b_creating_table_products.py  2024_12_27_0858-b6be9e6c8729_create_table_user.py  2024_12_27_0907-d7d55193aafd_create_posts_table.py  2024_12_27_0936-4d6513d261b6_create_profile_table.py  2025_01_06_1322-b13492d44edf_create_order_table.py  2025_01_07_1238-07b6eb8975d5_create_orderproductassociation_table.py
api_v1/: __init__.py
api_v1/demo_auth/: validation.py  views.py
api_v1/products/: crud.py  dependicies.py  schemas.py  views.py
app/categories/: dao.py  models.py  router.py  schemas.py
app/products/: dao.py  models.py  router.py  schemas.py
app/users/: crud.py  schemas.py  views.py
auth/: README.md
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  post.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
