[project]
name = "vaudience-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Lxg1c",email = "teran_2005@mail.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.115.6,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "aiosqlite (>=0.20.0,<0.21.0)",
    "black (>=24.10.0,<25.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
